<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Da Bomb</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome to daBomb!</string>
    <string name="explain">Join a game or start your own?</string>
    <string name="btn_game_start">Start game</string>
    <string name="btn_game_join">Join game</string>
    <string name="btn_answer">Answer</string>
    <string name="title_activity_lobby">LobbyActivity</string>
    <string name="title_activity_session">SessionActivity</string>
    <string name="header_lobby_list">Player list</string>

    <string name="label_session_round">Round $1%d</string>
    <string name="label_session_wait">Wait for your turn</string>
</resources>
