<ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/session_viewflipper"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"

        android:id="@+id/screen_player_active"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".SessionFragment">

        <ImageView
            android:id="@+id/bomb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/bomb_anim" />

        <TextView
            android:id="@+id/label_session_round"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_session_round"
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:gravity="center" />


        <Button
            android:id="@+id/btn_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_answer" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/bananaphone"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@drawable/bananaphone_anim" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_session_wait"
            android:layout_gravity="bottom"
            android:gravity="center"
            style="@android:style/TextAppearance.Large" />
    </LinearLayout>
</ViewFlipper>
